--- a/views/index.hbs
+++ b/views/index.hbs
@@ -34,181 +34,7 @@
     <link rel="stylesheet" href="http://static.9zhaowo.com/assets/css/app.css">
     
     <style id="bgtyle"  type="text/css">
-        .userBack {
-            background-color: #fff;
-            font-family: 微软雅黑;
-            border: 1px solid #dedede;
-            -moz-border-radius: 5px;
-            -webkit-border-radius: 5px;
-            padding: 5px 5px;
-            margin:5px
-        }
-        
-        .bottomNav {
-            background-color: white;
-            z-index:999;
-            position:fixed;
-            bottom:0;
-            left:0;
-            width:100%;
-            _position:absolute;
-            border-top: 1px solid #CCCCCC;
-            padding-top: 5px;
-            padding-bottom: 5px;
-            height:49px
-        }
-        
-        .infoLine {
-            background-color: white;
-            margin-top: 2px;
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
 
-        .front_link {
-        }
-
-        .back_link {
-        }
-
-        .comment-margin {
-            margin: 15px 15px;
-        }
-
-        .avatar_peer {
-            width: 50px;
-            position: absolute;
-            float: left;
-        }
-
-        .msg_peer {
-            position: relative;
-            float: left;
-            margin-left: 50px;
-        }
-
-        .avatar_self {
-            width: 50px;
-            position: absolute;
-            right: 0;
-        }
-        .msg_self {
-            float: right;
-            margin-right: 50px;
-        }
-
-        .msg_join{
-            margin-bottom: 25px;
-        }
-
-        small {
-            color:rgba(51, 48, 48, 0.53);
-            background-color: rgba(206, 212, 214, 0.81);
-            border-radius: 3px;
-            margin-left: 0px;
-            padding: 0px 5px;
-        }
-
-        .t_right {
-            float: right;
-        }
-
-        .msg_bk_color {
-            background-color: rgba(228, 223, 219, 0.55);
-        }
-
-        .msg_self_text {
-            background: #B0CEBA;
-            border: 1px solid #919482;
-            margin-bottom: 5px;
-            border-radius: 5px;
-            padding: 5px 8px;
-            float: right
-        }
-
-        .msg_peer_text {
-            background: #FFF;
-            border: 1px solid #919482;
-            margin-bottom: 5px;
-            border-radius: 5px;
-            padding: 5px 8px;
-        }
-
-        .am-radius2{
-            border-radius: 64px;
-        }
-
-        .avatar_list {
-            border-radius: 64px;
-            display: inline-block;
-            padding: 2px;
-            line-height:1.6;
-            transition: all .2s ease-in-out;
-        }
-
-        .my_search {
-            border-radius: 12px;
-            height: 35px;
-            box-shadow:none;
-            border:none;
-            font-family:'Hiragino Sans GB','Microsoft YaHei';
-        }
-
-        li {
-            display: inline-block;
-            padding: 0 5px 0 5px;
-        }
-
-        .plat_href {
-            color: #343434;
-        }
-
-        .picked .plat_href {
-            color: #fff;
-        }
-
-        #footer{
-            bottom:0;
-            left:0;
-            width: 100%;
-        }
-        
-        .split {
-            width:1px;
-            height:17px;
-            margin:0 12px;
-            background: #b3b3b3;
-            border-left: 1px solid #f5f5f5;
-        }
-
-        .footer-link {
-            text-align: center;
-            margin-top: 10px;
-        }
-
-        .name_color{
-            color: #000;
-        }
-
-        .user_left {
-            width:20%;
-            padding: 0;
-            float: left;
-            position: relative;
-        }
-
-        .user_right {
-            width:80%;
-            padding: 0 1rem 0 1rem;
-            float: left;
-            position: relative;
-        }
-
-        .picked {
-            background-color: #ff946e;
-            border-radius: 15px;
-            color: #fff !important;
-        }
     </style>
 </head>
 <body style="background-color: #F0EFF4;padding-bottom:0px">
@@ -318,10 +144,10 @@
         <!-- page select start -->
         <ul data-am-widget="pagination" class="front_link am-pagination am-pagination-default">
             <li class="am-pagination-prev">
-                <a id="page_prev" href="#" class="front_link am-btn am-btn-link">上一页</a>
+                <a id="page_prev" href="#" class="front_link am-btn am-btn-link page_ctrl">上一页</a>
             </li>
             <li class="am-pagination-next ">
-                <a id="page_next" href="/page/1"  class="front_link am-btn am-btn-link" ">下一页</a>
+                <a id="page_next" href="/page/1"  class="front_link am-btn am-btn-link page_ctrl">下一页</a>
             </li>
         </ul>
 
@@ -533,7 +359,7 @@
             </div>
 
             <div class="am-g am-intro-bd" style="background-color: white;">
-                <div class="am-intro-left am-u-sm-5"><img class="am-radius am-img-thumbnail" img_url_xxx alt="头像" width="120px" height="120px"/></div>
+                <div class="am-intro-left am-u-sm-5"><img class="am-radius am-img-thumbnail" img_url_xxx alt="头像" width="80px" height="80px"/></div>
                 <div class="am-intro-right am-u-sm-7">
                     <p>{name}</p>
                     <p>地区: {city}</p>
@@ -541,26 +367,27 @@
             </div>
 
             <div class="am-g infoLine">
-                <div class="am-u-sm-3" style="padding-left:20px">行业</div>
-                <div class="am-u-sm-9" style="padding-left:20px">{industry}</div>
+                <div class="user_left" style="padding-left:20px">行业</div>
+                <div class="user_right" >{industry}</div>
             </div>
             <div class="am-g infoLine">
-                <div class="am-u-sm-3" style="padding-left:20px">标签</div>
-                <div class="am-u-sm-9" style="padding-left:20px">{tag}</div>
+                <div class="user_left" style="padding-left:20px">标签</div>
+                <div class="user_right" >{tag}</div>
             </div>
 
             <div class="am-g infoLine">
-                <div class="am-u-sm-3" style="padding-left:20px">简介</div>
-                <div class="am-u-sm-9" style="padding-left:20px">{introduce}</div>
+                <div class="am-u-sm-12" style="padding-left:20px;font-size: 90%">{introduce}</div>
             </div>
 
-            <div class="am-g " id="leave_msg" style="margin-top: 30px;margin-left: 3px">
-                <div>
-                    <textarea  id='leave_msg_sp' style="border:0px;width:100%;line-height: 28px;" rows='2'  placeholder="给他留消息" ></textarea>
+            <div  id="leave_msg" style="width:100%; margin-top: 30px;margin-left: 3px;height: 150px">
+                <div style="width:80%;margin: 0;padding: 0;float: left">
+                    <textarea  id='leave_msg_sp'  rows='3' style="width: 100%;border:0;border-radius: 0;resize:none"  placeholder="给他留消息" ></textarea>
                 </div>
-                <div style="margin-top: 0px">
-                    <button id="editCommit" type="button" class="am-btn am-btn-secondary" style="float: right" onclick="send_msg_sp()">发送</button>
+
+                <div style="width:20%;margin: 0;padding: 0;float: left">
+                    <button id="editCommit" style="height: 79px;padding-right: 2px;" type="button" class="am-btn am-btn-secondary am-btn-block" onclick="send_msg_sp()">发送</button>
                 </div>
+
             </div>
         </div>
 
